@@ -1,3 +1,9 @@
+Sun Jan  4 16:58:17 CET 2009 Guido Günther <agx@sigxcpu.org>
+
+	add gconf schema
+	*  src/Makefile.am: process, install and cleanup schema file
+	*  src/krb5-auth-dialog.schemas.in: new file
+
 Sun Jan  4 16:51:33 CET 2009 Guido Günther <agx@sigxcpu.org>
 
 	move HAVE_LIBNOTIFY check into krb5-auth-notify.c and simplify
